--- a/onscommons/src/main/java/it/mate/onscommons/client/ui/theme/css/ons.css
+++ b/onscommons/src/main/java/it/mate/onscommons/client/ui/theme/css/ons.css
@@ -128,6 +128,10 @@ ons-alert-dialog {
   padding-bottom: 14px;
 }
 
+.alert-dialog-footer {
+  display: flex;
+}
+
 .ons-searchbox:focus {
   background-color: transparent;
   border: none;
